--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js - WebGPU - Selective Lights</title>
+		<title>three.js - webgpu - playground</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -17,25 +17,27 @@
 				position: absolute;
 				top: 0;
 				left: 0;
-				height: 50%;
+				height: 100%;
 				width: 100%;
 			}
 			flow {
 				position: absolute;
-				top: 50%;
+				top: 0;
 				left: 0;
-				height: 50%;
+				height: 100%;
 				width: 100%;
-				background: #222;
 				box-shadow: inset 0 0 20px 0px #000000;
+				pointer-events: none;
+			}
+			flow f-canvas {
+				pointer-events: auto;
+			}
+			flow f-canvas:not(.editing) {
+				background: #00000050;
 			}
 		</style>
 	</head>
 	<body>
-
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - WebGPU - Node Editor ( Playground version )<br />
-		</div>
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
@@ -60,17 +62,15 @@
 			import { NodeEditor } from 'three/addons/node-editor/NodeEditor.js';
 			import { MeshEditor } from 'three/addons/node-editor/scene/MeshEditor.js';
 
-			import Stats from 'three/addons/libs/stats.module.js';
-
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { FBXLoader } from 'three/addons/loaders/FBXLoader.js';
 
 			// Use PreviewEditor in WebGL for now
 			import { nodeFrame } from 'three/addons/renderers/webgl/nodes/WebGLNodes.js';
 
-			let stats;
 			let camera, scene, renderer;
 			let model;
+			let nodeEditor;
 
 			init().then( animate ).catch( error => console.error( error ) );
 
@@ -111,18 +111,15 @@
 
 				//
 
-				stats = new Stats();
-				document.body.appendChild( stats.dom );
-
 				const controls = new OrbitControls( camera, renderer.domElement );
 				controls.minDistance = 500;
 				controls.maxDistance = 3000;
 
 				window.addEventListener( 'resize', onWindowResize );
 
-				onWindowResize();
-
 				initEditor();
+
+				onWindowResize();
 
 				return renderer.init();
 
@@ -130,13 +127,14 @@
 
 			function initEditor() {
 
-				const nodeEditor = new NodeEditor( scene );
+				nodeEditor = new NodeEditor( scene );
 
 				nodeEditor.addEventListener( 'new', () => {
 
 					const materialEditor = new MeshEditor( model );
 
 					nodeEditor.add( materialEditor );
+					nodeEditor.setScroll( 0, 0 );
 					nodeEditor.centralizeNode( materialEditor );
 
 				} );
@@ -185,12 +183,14 @@
 			function onWindowResize() {
 
 				const width = window.innerWidth;
-				const height = window.innerHeight / 2;
+				const height = window.innerHeight;
 
 				camera.aspect = width / height;
 				camera.updateProjectionMatrix();
 
 				renderer.setSize( width, height );
+
+				nodeEditor.setSize( width, height );
 
 			}
 
@@ -203,8 +203,6 @@
 				nodeFrame.update();
 
 				render();
-
-				stats.update();
 
 			}
 
