--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -32,7 +32,7 @@
 			flow f-canvas {
 				pointer-events: auto;
 			}
-			flow f-canvas:not(.editing) {
+			flow f-canvas:not(.focusing) {
 				background: #00000050;
 			}
 		</style>
