--- a/manual/en/prerequisites.html
+++ b/manual/en/prerequisites.html
@@ -47,7 +47,7 @@ They assume you know what a closure is.</p>
 or inline via a <code class="notranslate" translate="no">&lt;script type="module"&gt;</code> tag. Here's an example of
 both</p>
 <pre class="prettyprint showlinemods notranslate lang-html" translate="no">&lt;script type="module"&gt;
-import * as THREE from '../../build/three.module.js';
+import * as THREE from 'three';
 
 ...
 
