--- a/manual/fr/fundamentals.html
+++ b/manual/fr/fundamentals.html
@@ -116,7 +116,7 @@ nombre minimum d'élements Three.js :</p>
 
 <p>Tout d'abord, chargeons Three.js :</p>
 <pre class="prettyprint showlinemods notranslate lang-html" translate="no">&lt;script type="module"&gt;
-import * as THREE from './resources/threejs/r130/build/three.module.js';
+import * as THREE from 'three';
 &lt;/script&gt;
 </pre>
 <p>Il est important d'écrire <code class="notranslate" translate="no">type="module"</code> dans la balise script.
