--- a/manual/ja/transparency.html
+++ b/manual/ja/transparency.html
@@ -342,8 +342,8 @@ gui.add(new AllMaterialPropertyGUIHelper('transparent', scene), 'value')
     .onChange(requestRenderIfNotRequested);
 </pre>
 <p>もちろん、lil-guiを含める必要があります。</p>
-<pre class="prettyprint showlinemods notranslate lang-js" translate="no">import * as THREE from './resources/three/r119/build/three.module.js';
-import {OrbitControls} from './resources/threejs/r119/addons/controls/OrbitControls.js';
+<pre class="prettyprint showlinemods notranslate lang-js" translate="no">import * as THREE from 'three';
+import {OrbitControls} from 'three/addons/controls/OrbitControls.js';
 +import {GUI} from 'three/addons/libs/lil-gui.module.min.js';
 </pre>
 <p>その結果がこちらです。</p>
