reduce flower color to improve visibility

--- a/examples/webgl_instancing_scatter.html
+++ b/examples/webgl_instancing_scatter.html
@@ -240,6 +240,7 @@
 
 				stemMesh.setMatrixAt( i, dummy.matrix );
 				blossomMesh.setMatrixAt( i, dummy.matrix );
+				_color.addScalar( - 0.2 );
 				blossomMesh.setColorAt( i, _color );
 
 			}
