--- a/examples/webgpu_skinning_instancing.html
+++ b/examples/webgpu_skinning_instancing.html
@@ -86,6 +86,8 @@
 
 						if ( child.isMesh ) {
 
+							const oscNode = oscSine( timerLocal( .1 ) );
+
 							// random colors between instances from 0x000000 to 0xFFFFFF
 							const randomColors = range( new THREE.Color( 0x000000 ), new THREE.Color( 0xFFFFFF ) );
 
@@ -94,8 +96,8 @@
 
 							child.material = new Nodes.MeshStandardNodeMaterial();
 							child.material.roughness = .1;
-							child.material.metalnessNode = randomMetalness;
-							child.material.colorNode = mix( color( 0xFFFFFF ), randomColors, oscSine( timerLocal( .1 ) ) );
+							child.material.metalnessNode = mix( 0.0, randomMetalness, oscNode );
+							child.material.colorNode = mix( color( 0xFFFFFF ), randomColors, oscNode );
 
 							child.isInstancedMesh = true;
 							child.instanceMatrix = new THREE.InstancedBufferAttribute( new Float32Array( instanceCount * 16 ), 16 );
