--- a/examples/webgl_animation_skinning_ik.html
+++ b/examples/webgl_animation_skinning_ik.html
@@ -60,6 +60,7 @@
 			container = document.getElementById( 'container' );
 
 			conf = {
+				followSphere: false,
 				turnHead: true,
 				ik_solver: true,
 			};
@@ -69,7 +70,7 @@
 			scene.background = new THREE.Color( 0xdddddd );
 
 			camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.001, 5000 );
-			camera.position.set( 1.2774095977377922, 1.0497669538277439, 1.0011578425141974 );
+			camera.position.set( 1.1531229854362994, 1.1954971743490563, 0.8774702890024408 );
 			camera.lookAt( scene.position );
 
 			const ambientLight = new THREE.AmbientLight( 0xffffff, 8 ); // soft white light
@@ -87,9 +88,8 @@
 
 			orbitControls = new OrbitControls( camera, renderer.domElement );
 			orbitControls.minDistance = .2;
-			orbitControls.maxDistance = 1.25;
+			orbitControls.maxDistance = 1.5;
 			orbitControls.enableDamping = true;
-			orbitControls.update();
 
 			const dracoLoader = new DRACOLoader();
 			dracoLoader.setDecoderPath( 'js/libs/draco/' );
@@ -161,6 +161,7 @@
 			scene.add( ccdikhelper );
 
 			gui = new GUI();
+			gui.add( conf, 'followSphere' ).name( 'follow sphere' );
 			gui.add( conf, 'turnHead' ).name( 'turn head' );
 			gui.add( conf, 'ik_solver' ).name( 'IK auto update' );
 			gui.add( IKSolver, 'update' ).name( 'IK manual update()' );
@@ -181,7 +182,7 @@
 
 			}
 
-			if ( OOI.sphere ) {
+			if ( OOI.sphere && conf.followSphere ) {
 
 				// orbitControls follows the sphere
 				orbitControls.target.lerp( OOI.sphere.getWorldPosition( new THREE.Vector3() ), .1 );
