update example to use tangent

--- a/examples/webgpu_loader_gltf.html
+++ b/examples/webgpu_loader_gltf.html
@@ -83,6 +83,17 @@
 					//const light = new THREE.PointLight( 0xffffff );
 					//camera.add( light );
 
+					const mesh = gltf.scene.children[ 0 ];
+					const nodeMaterial = Nodes.NodeMaterial.fromMaterial( mesh.material );
+
+					nodeMaterial.normalNode = Nodes.normalMap( Nodes.texture( nodeMaterial.normalMap ) );
+					nodeMaterial.normalMap = null; // ignore non-node normalMap material
+
+					// optional: use tangent to compute normalMap
+					mesh.geometry.computeTangents();
+
+					mesh.material = nodeMaterial;
+
 					scene.add( gltf.scene );
 
 					render();
